// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > renders the danger variant with the right semantic classes 1`] = `
<div
  class="relative w-full rounded-lg border p-4 text-sm [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:h-4 [&>svg]:w-4 [&>svg~*]:pl-7 border-danger-border bg-danger-bg text-danger-text [&>svg]:text-danger-text"
  role="alert"
>
  <h5
    class="mb-1 font-semibold leading-tight tracking-tight"
  >
    Title
  </h5>
  <div
    class="text-sm leading-relaxed [&_p]:leading-relaxed"
  >
    Body
  </div>
</div>
`;

exports[`Alert > renders the default variant with the right semantic classes 1`] = `
<div
  class="relative w-full rounded-lg border p-4 text-sm [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:h-4 [&>svg]:w-4 [&>svg~*]:pl-7 border-border bg-surface text-fg [&>svg]:text-fg-muted"
  role="alert"
>
  <h5
    class="mb-1 font-semibold leading-tight tracking-tight"
  >
    Title
  </h5>
  <div
    class="text-sm leading-relaxed [&_p]:leading-relaxed"
  >
    Body
  </div>
</div>
`;

exports[`Alert > renders the destructive variant with the right semantic classes 1`] = `
<div
  class="relative w-full rounded-lg border p-4 text-sm [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:h-4 [&>svg]:w-4 [&>svg~*]:pl-7 border-danger-border bg-danger-bg text-danger-text [&>svg]:text-danger-text"
  role="alert"
>
  <h5
    class="mb-1 font-semibold leading-tight tracking-tight"
  >
    Title
  </h5>
  <div
    class="text-sm leading-relaxed [&_p]:leading-relaxed"
  >
    Body
  </div>
</div>
`;

exports[`Alert > renders the info variant with the right semantic classes 1`] = `
<div
  class="relative w-full rounded-lg border p-4 text-sm [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:h-4 [&>svg]:w-4 [&>svg~*]:pl-7 border-info-border bg-info-bg text-info-text [&>svg]:text-info-text"
  role="alert"
>
  <h5
    class="mb-1 font-semibold leading-tight tracking-tight"
  >
    Title
  </h5>
  <div
    class="text-sm leading-relaxed [&_p]:leading-relaxed"
  >
    Body
  </div>
</div>
`;

exports[`Alert > renders the success variant with the right semantic classes 1`] = `
<div
  class="relative w-full rounded-lg border p-4 text-sm [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:h-4 [&>svg]:w-4 [&>svg~*]:pl-7 border-success-border bg-success-bg text-success-text [&>svg]:text-success-text"
  role="alert"
>
  <h5
    class="mb-1 font-semibold leading-tight tracking-tight"
  >
    Title
  </h5>
  <div
    class="text-sm leading-relaxed [&_p]:leading-relaxed"
  >
    Body
  </div>
</div>
`;

exports[`Alert > renders the warning variant with the right semantic classes 1`] = `
<div
  class="relative w-full rounded-lg border p-4 text-sm [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:h-4 [&>svg]:w-4 [&>svg~*]:pl-7 border-warning-border bg-warning-bg text-warning-text [&>svg]:text-warning-text"
  role="alert"
>
  <h5
    class="mb-1 font-semibold leading-tight tracking-tight"
  >
    Title
  </h5>
  <div
    class="text-sm leading-relaxed [&_p]:leading-relaxed"
  >
    Body
  </div>
</div>
`;
